@@ -16,6 +16,8 @@ Changes
 Fixes
 -----
 
+ - Show generation expression for generated columns in Tables view.
+
  - Added the row count number to the query status in the Console view. 
 
  - Fixed issue that caused the privileges view to not be scrollable.
